feat: support player number in choice (#6)